# blog-site

api/: Cargo.toml
api/sql/: schema.sql  seed.sql
api/src/: config.rs  error.rs  main.rs
api/src/models/: mod.rs  post.rs  series.rs  services.rs  site_tag.rs
api/src/routes/: mod.rs  post.rs  series.rs  services.rs
client/: package-lock.json  package.json  tailwind.config.js
client/components/: Body.tsx  DsFooter.tsx  Header.tsx  Loading.tsx  Main.tsx  NavbarLink.tsx
client/components/home/: BlogTimeline.tsx  Hero.tsx  HomeCard.tsx  LiveServices.tsx  RecentSeries.tsx
client/components/series/: IndexCard.tsx  SeriesMainCard.tsx  SeriesPostCard.tsx
client/components/services/: ServiceCard.tsx
client/interfaces/: Client.ts  Data.ts
client/lib/: Posts.ts  Rendering.tsx
client/pages/: _app.tsx  contact.tsx  index.tsx
client/pages/api/: home.ts
client/pages/api/series/: index.ts
client/pages/api/series/[slug]/: [id].ts  index.ts
client/pages/api/services/: index.ts
client/pages/blog/: index.tsx
client/pages/series/: index.tsx
client/pages/series/[slug]/: [id].tsx  index.tsx
client/pages/services/: index.tsx
client/posts/building-site-api/: 1-initial-setup.md  2-dynamic-routing.md  3-database-impl.md  4-calling-api.md
