[package]
name = "api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.2.1"
config = "0.13.2"
deadpool-postgres = { version = "0.10.3", features = ["serde"] }
derive_more = "0.99.17"
dotenv = "0.15.0"
once_cell = "1.16.0"
serde = { version = "1.0.147", features = ["derive"] }
serde_json = "1.0.87"
time = { version = "0.3.17", features = ["serde"] }
tokio-postgres = { version = "0.7.7", features = ["with-time-0_3"]}
